Moved navbar into its own partial, now rendered on all pages. Fixed CSS issue where navbar covered up some content

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,3 +30,7 @@ ul.unordered {
     margin: 0;
     padding:0;
 }
+
+body { // Don't want bootstrap nav bar obscuring top 50px of content lol
+    padding-top: 50px;
+}
